--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -260,6 +260,12 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
+              <a href="{{ path('user_index') }}" class="nav-link gestion-user">
+                <i class="fas fa-users nav-icon"></i>
+                <p>User</p>
+              </a>
+            </li>
+            <li class="nav-item">
               <a href="{{ path('article_index') }}" class="nav-link gestion-article">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Article</p>
