--- a/templates/macros/link.html.twig
+++ b/templates/macros/link.html.twig
@@ -1,3 +1,15 @@
-{% macro edit(path,option = ) %}
-    <a class="btn btn-success " href="{{ path(path,option) }}"><i class="fas fa-pencil-alt"></i></a>
+{% macro edit(path) %}
+    <a class="btn btn-sm btn-success " href="{{ path }} "><i class="fas fa-pencil-alt"></i></a>
 {% endmacro %}
+
+{% macro delete(path) %}
+    <a class="btn btn-sm btn-danger " href="{{ path }} "><i class="fas fa-trash-alt"></i></a>
+{% endmacro %}
+
+{% macro back(path,text) %}
+    <a class="btn btn-default" href="{{ path }} "> <i class="fa fa-arrow-circle-left" aria-hidden="true"></i> {{ text|default('back to list') }} </a>
+{% endmacro %}
+{% macro add(path,text) %}
+    <a class="btn btn-primary" href="{{ path }} "> {{ text|default('Create') }} <i class="fas fa-plus" aria-hidden="true"></i></a>
+{% endmacro %}
+
