--- a/templates/main/article/index.html.twig
+++ b/templates/main/article/index.html.twig
@@ -81,32 +81,48 @@ a {
 }
 </style>
 {{ search.search(form) }}
-<div class="container">
-    <div class="count">
-       <h2>
-            {{ articles.getTotalItemCount }} Produit{% if articles.getTotalItemCount > 0 %}s{% endif %} 
-       </h2> 
+<div class="row">
+    <div class="col-lg-4">
+    <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center ">
+            <a href="{{ path('articles') }}">Active list item</a>
+            <span class="badge badge-secondary badge-pill">pill1</span>
+        </li>
+        {% for item in category %}
+        <li class="list-group-item d-flex justify-content-between align-items-center ">
+            <a href="{{ path('articles',{category: item.id }) }}">{{ item.title }}</a>
+            <span class="badge badge-secondary badge-pill">0</span>
+        </li>
+        {% endfor %}
+    </ul>
     </div>
-    <p>
-        <a class="btn btn-primary btn-lg" href="{{ path('card_index') }}">{% trans %}Voir le Panier{% endtrans %} </a>
-    </p>
-    <h1>{% trans %}Voir tous nos biens{% endtrans %} </h1>
-    {% if articles is empty() %}
-    <div class="alert alert-info text-center">
-        <p>Aucun résulat associé à la recherche:</p>
-    </div>
-    {% endif %}
-    <div class="pagination">
+    <div class="col-lg-8">
+        <div class="count">
+        <h2>
+                {{ articles.getTotalItemCount }} Produit{% if articles.getTotalItemCount > 0 %}s{% endif %} 
+        </h2> 
+        </div>
+        <p>
+            <a class="btn btn-primary btn-lg" href="{{ path('card_index') }}">{% trans %}Voir le Panier{% endtrans %} </a>
+        </p>
+        <h1>{% trans %}Voir tous nos biens{% endtrans %} </h1>
+        {% if articles is empty() %}
+        <div class="alert alert-info text-center">
+            <p>Aucun résulat associé à la recherche:</p>
+        </div>
+        {% endif %}
+        <div class="pagination">
+            {{ knp_pagination_render(articles) }}
+        </div>
+        <div class="row">
+        {% for item in articles %}
+            <div class="col-md-4 mt-2">
+                {% include "main/article/_article.html.twig" %}  
+            </div>
+        {% endfor %}
+        </div>
         {{ knp_pagination_render(articles) }}
     </div>
-    <div class="row">
-    {% for item in articles %}
-        <div class="col-md-4 mt-2">
-            {% include "main/article/_article.html.twig" %}  
-        </div>
-    {% endfor %}
-    </div>
-    {{ knp_pagination_render(articles) }}
-        
 </div>
+    
 {% endblock %}
