--- a/templates/main/article/index.html.twig
+++ b/templates/main/article/index.html.twig
@@ -105,7 +105,7 @@ a {
         <p>
             <a class="btn btn-primary btn-lg" href="{{ path('card_index') }}">{% trans %}Voir le Panier{% endtrans %} </a>
         </p>
-        <h1>{% trans %}Voir tous nos biens{% endtrans %} </h1>
+        <h1>{% trans %}See all our articles{% endtrans %} </h1>
         {% if articles is empty() %}
         <div class="alert alert-info text-center">
             <p>Aucun résulat associé à la recherche:</p>
