--- a/templates/main/card/index_1.html.twig
+++ b/templates/main/card/index_1.html.twig
@@ -11,9 +11,13 @@
       <p>{{item}}</p>
   </div>
   {% endfor %}
+  <pre>
+    {{ dump(items) }}
+  </pre>
 {# {{ search.search(form) }} #}
 <div class="row">
   <div class="col-lg-8">
+  <form action="" name="cart" id="form">
     <div class="card">
      <tbody id="displayArea"></tbody>
       <div class="card-body">
@@ -29,31 +33,21 @@
               
               <tbody>
               {% for key, item in items %}
-                <tr>
+                <tr name="line_items">
                   <td>
                     <a href="{{ path('card_delete',{id: item.article.id} ) }}" class="btn-sm"><i class="fa fa-window-close text-danger" aria-hidden="true"></i></a>
                   </td>
                   <td><img src="{{ asset('img/vide.png') }}" width="80px" alt=""> </td>
                   <td>{{ item.article.title}} </td>
                   <td>
-                      <form class="form-row" action="" method="post">
-                        <div class="form-group col-6">
-                        <input type="hidden" name="article_id" value="{{ item.article.id }}">
-                          <input type="number" class="form-control" min="1" max="{{ item.article.quantity }}" name="qty" value="{{ item.quantite }}" >
-                          <small id="helpId" class="text-muted">Stock: {{ item.article.quantity  }} </small>
-                        </div>
-                        <div class="form-group col-2">
-                          <button type="submit" class="btn btn-success ml-1">
-                            Appliquer
-                          </button>
-                        </div>
-                      </form>
+                      <input type="number" class="form-control" min="1" max="{{ item.article.quantity }}" name="qty" value="{{ item.quantite }}" >
+                      <small id="helpId" class="text-muted">Stock: {{ item.article.quantity  }} </small>
                   </td>
                   <td>
-                      {{ item.article.price|number_format(2,'.',' ') }} XOF
+                      <input type="number" disabled class="form-control" name="price" value="{{ item.article.price }}" >
                   </td>
                   <td>
-                      {{ (item.article.price * item.quantite) | number_format(2,'.',' ') }} XOF
+                    <input type="text" class="form-control" name="item_total" value="" jAutoCalc="{qty} * {price}">
                   </td>
                 </tr>
               {% endfor %}
@@ -62,34 +56,30 @@
             <div class="row">
               <div class="col-lg-6 offset-6 ">
                 <table class="table">
-                  {# <tr>
+                  <tr>
                     <td>Total Subtoal</td>
-                    <td></td>
-                  </tr> #}
-                  {# <tr>
+                    <td><input type="text" class="form-control" disabled name="subtotal" value="" jAutoCalc="SUM({item_total})"></td>
+                  </tr>
+                  <tr>
                     <td>Shipping</td>
-                    <td> 1000 XOF</td>
-                  </tr> #}
+                    <td> <input type="text" disabled name="shipping" class="form-control" value="1000"></td>
+                  </tr>
                   <tr>
                     <td>Total :</td>
-                    <td> {{ total|number_format(2,'.',' ') }} XOF</td>
+                    <td><input type="text" disabled name="total" value="" jAutoCalc="{subtotal} + {shipping} "></td>
                   </tr>
                 </table>
                 {# <a  href="#">
                   Commander
                 </a> #}
-                <div class="btn-group">
                   <button class="btn btn-lg rounded btn-primary" type="submit">
                     Commander
                   </button>
-                  <a href="#" class="btn-danger btn-lg ml-1">
-                    Clear <i class="fa fa-trash" aria-hidden="true"></i>
-                  </a>
-                </div>
               </div>
             </div>
       </div>
     </div>
+  </form>
   </div>
   <div class="col-lg-4">
   <div class="card card-outine card-primary">
@@ -99,4 +89,35 @@
   </div>
   </div>
 </div>
+{% endblock %}
+
+{% block foot %}
+  <script src="{{ asset('autocal/dist/jautocalc.min.js') }}"></script>
+{% endblock %}
+
+{% block javascripts %}
+<script>
+  $(document).ready(function(){
+  //  $('form').jAutoCalc();
+
+    function autoCalcSetup() {
+        $('form[name=cart]').jAutoCalc('destroy');
+        $('form[name=cart] tr[name=line_items]').jAutoCalc({keyEventsFire: true, decimalPlaces: 2, emptyAsZero: true});
+        $('form[name=cart]').jAutoCalc({decimalPlaces: 2});
+    }
+    autoCalcSetup()
+
+    $('#form').submit(function(e) {
+      e.preventDefault()
+    var $inputs = $('#form :input');
+    var values = {};
+    $inputs.each(function() {
+      values[this.name] = $(this).val();
+    // console.log($(this).val());
+    });
+    console.log(values);
+    // $('#displayArea').append("<td>" + values.name + "</td><td>" + values.roll + "</td><td>" + values.class + "</td><td>" + values.age + "</td><td>" + values.nid + "</td></tr>");
+  });
+  })
+</script>
 {% endblock %}
