--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -175,7 +175,11 @@
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="image">
-        <img src="{{ asset('/img/user/' ~ app.user.personne.avatar ) }}" class="img-circle elevation-2" alt="User Image">
+        {% if app.user.personne.avatar %}
+          <img src="{{ asset('/img/user/' ~ app.user.personne.avatar ) }}" class="img-circle elevation-2" alt="User Image">
+        {% else %}
+          <img src="{{ asset('/img/avatar.png') }}" class="img-circle elevation-2" alt="User Image">
+        {% endif %}
       </div>
       <div class="info">
         <a href="{{ path('profile_index') }}" class="d-block">{{ app.user.personne.firstname ~ ' ' ~ app.user.personne.lastname  }}</a>
@@ -215,17 +219,11 @@
             <li class="nav-item">
               <a href="{{ path('admin')}}" class="nav-link tableau-de-board">
                 <i class="far fa-circle nav-icon"></i>
-                <p>Tableau de board 1</p>
+                <p>{% trans %}Dashboard 1 {% endtrans %}</p>
               </a>
             </li>
           </ul>
         </li>
-        {# <li class="nav-item">
-          <a href="{{ path('profile_index')}}" class="mon-profile nav-link">
-            <i class="nav-icon fa fa-user-circle"></i>
-            <p>Mon profile</p>
-          </a>
-        </li> #}
         <li id="pages" class="nav-item">
           <a href="#" class="pages nav-link">
             {# <i class="nav-icon fa fa-cogs"></i> #}
@@ -250,11 +248,19 @@
             </li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a href="{{ path('home')}}" class="my-order nav-link">
+            <i class="nav-icon far fa-circle"></i>
+            <p>{% trans %}My Orders{% endtrans %}</p>
+          
+          </a>
+        </li>
+        {% if is_granted('ROLE_EDITOR') %}
         <li id="gestions" class="nav-item">
           <a href="#" class="gestions nav-link">
             <i class="nav-icon fa fa-cogs"></i>
             <p>
-              Gestions
+            {% trans %}Manage{% endtrans %}
               <i class="right fas fa-angle-left"></i>
             </p>
           </a>
@@ -280,7 +286,7 @@
             <li class="nav-item">
               <a href="{{ path('order_index') }}" class="nav-link gestion-order ">
                 <i class="far fa-circle nav-icon"></i>
-                <p>Commande</p>
+                <p>Order</p>
               </a>
             </li>
             {# <li class="nav-item">
@@ -304,6 +310,8 @@
              #}
           </ul>
         </li>
+         {% endif %}
+         {% if is_granted('ROLE_ADMIN') %}
         <li class="nav-item">
           <a href="#" class="nav-link ">
             <i class="nav-icon fa fa-cog"></i>
@@ -321,6 +329,7 @@
             </li>
           </ul>
         </li>
+        {% endif %}
         <li class="nav-item">
           <a href="{{ path('app_logout')}}" class="nav-link">
             <i class="nav-icon fas fa-power-off text-danger"></i>
