--- a/templates/admin/profile/index.html.twig
+++ b/templates/admin/profile/index.html.twig
@@ -25,13 +25,13 @@
       <div class="card card-primary card-outline">
         <div class="card-body box-profile">
           <div class="text-center">
-            {% if app.user.personne.avatar %}
+            {% if app.user.personne.avatar is not null %}
               <img class="profile-user-img img-fluid img-circle"
                   src="{{ asset('img/user/' ~ app.user.personne.avatar ) }}"
                   alt="{{ app.user.personne.firstName ~ ' ' ~ app.user.personne.lastName  }}">
               {% else %}
               <img class="profile-user-img img-fluid img-circle"
-                  src="{{ asset('img/user-vide.png') }}"
+                  src="{{ asset('img/avatar.png') }}"
                   alt="">
             {% endif %}
           </div>
