--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="{{ asset('adminLte/plugins/fontawesome-free/css/all.min.css') }}">
+    <!-- Add the slick-theme.css if you want default styling -->
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <!-- Add the slick-theme.css if you want default styling -->
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+
   <!-- Theme style -->
   <link rel="stylesheet" href="{{ asset('adminLte/dist/css/adminlte.min.css') }}">
   {% block head %}{% endblock %}
@@ -34,9 +39,16 @@
           <li class="nav-item">
             <a href="/" class="nav-link">Home</a>
           </li>
-          {% if is_granted('ROLE_ADMIN') %}
+          {% if  is_granted('ROLE_USER') %}
             <li class="nav-item">
-              <a href="{{ path('admin') }}" class="nav-link">Admin</a>
+              <a href="{{ path('admin') }}" class="nav-link">dashboard</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a href="{{ path('app_login') }}" class="nav-link">Login</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ path('app_register') }}" class="nav-link">Register</a>
             </li>
           {% endif %}
           <li class="nav-item dropdown">
@@ -136,6 +148,9 @@
 <script src="{{ asset('adminLte/plugins/jquery/jquery.min.js') }}"></script>
 <!-- Bootstrap 4 -->
 <script src="{{ asset('adminLte/plugins/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+<!-- slick -->
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
 <!-- AdminLTE App -->
 <script src="{{ asset('adminLte/dist/js/adminlte.min.js') }}"></script>
 {% block foot %}{% endblock %}
