search and customer bar

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -16,6 +16,9 @@
 {% endblock %}
 
 {% block body %}
+<pre>
+    {# {{ dump(app.user.roles) }} #}
+</pre>
 <div class="container-fluid">
     <!-- Info boxes -->
     <div class="row">
