--- a/templates/main/article/index.html.twig
+++ b/templates/main/article/index.html.twig
@@ -83,29 +83,30 @@ a {
 {{ search.search(form) }}
 <div class="row">
     <div class="col-lg-4">
-    <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center ">
-            <a href="{{ path('articles') }}">Active list item</a>
-            <span class="badge badge-secondary badge-pill">pill1</span>
-        </li>
-        {% for item in category %}
-        <li class="list-group-item d-flex justify-content-between align-items-center ">
-            <a href="{{ path('articles',{category: item.id }) }}">{{ item.title }}</a>
-            <span class="badge badge-secondary badge-pill">0</span>
-        </li>
-        {% endfor %}
-    </ul>
+        <div class="card">
+            <div class="card-header">
+                <p class="h3" >All articles </p>
+            </div>
+            <div class="card-body">
+                <ul class="list-group">
+                    {% for item in category %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center border-none ">
+                        <a class="font-weight-bold" href="{{ path('articles',{category: item.id }) }}">{{ item.title }}</a>
+                        <span class="badge badge-secondary badge-pill">0</span>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+            </div>
+            <div class="card-body">
+            </div>
+        </div>
     </div>
     <div class="col-lg-8">
-        <div class="count">
-        <h2>
-                {{ articles.getTotalItemCount }} Produit{% if articles.getTotalItemCount > 0 %}s{% endif %} 
-        </h2> 
-        </div>
-        <p>
-            <a class="btn btn-primary btn-lg" href="{{ path('card_index') }}">{% trans %}Voir le Panier{% endtrans %} </a>
-        </p>
-        <h1>{% trans %}See all our articles{% endtrans %} </h1>
+        <h1>{% trans %}See all our articles{% endtrans %} |  {{ articles.getTotalItemCount }} Produt{% if articles.getTotalItemCount > 0 %}s{% endif %}  </h1>
         {% if articles is empty() %}
         <div class="alert alert-info text-center">
             <p>Aucun résulat associé à la recherche:</p>
