--- a/templates/admin/article/_datatable.html.twig
+++ b/templates/admin/article/_datatable.html.twig
@@ -35,10 +35,12 @@
         <a href="{{ path('article_edit',{id: item.id} ) }}" class="btn">
             <i class="fas fa-edit text-success"></i>
         </a>
+        {% if is_granted('ROLE_ADMIN') %}
         <form class="d-inline-block" method="post" action="{{ path('article_delete', {'id': item.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ item.id) }}">
             <button class="btn"><i class="fas fa-trash-alt  text-danger  "></i></button>
         </form>
+        {% endif %}
         
         </td>
     </tr>
